[package]
name = "rustfaas"
version = "0.2.0"
authors = ["Babis Chalios <mail@bchalios.io>", "Issam Hakimi <xxxx@xxx.com>"]
edition = "2021"

[lib]
name = "rustfaas"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
hyper = { version = "0.14.20", features = ["full"] }
log = "0.4.17"
tower-service = "0.3.2"
http = "0.2.8"
futures = "0.3.23"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }
env_logger = "0.9.0"
log = "0.4.17"
futures-util = "0.3.23"